@startuml

skinparam classAttributeIconSize 0
hide empty attributes

class "{NameOfUC}X" <<application>> {
}

class PersistenceContext <<persistence>> {
  +repositories(): RepositoryFactory
}

class AppSettings {
  +instance(): AppSettings
  +getRepositoryFactory(): RepositoryFactory
}

class RepositoryFactory <<factory>> {
  +{nameOfObjects}(): {NameOfObject}Repository
}

class "{NameOfObject}Repository" <<repository>> {
}

"{NameOfUC}X" ..> PersistenceContext
PersistenceContext ..> AppSettings
AppSettings ..> RepositoryFactory
"{NameOfUC}X" ..> RepositoryFactory
RepositoryFactory ..> "{NameOfObject}Repository"

@enduml
